Second batch of code smells