@@ -72,7 +72,6 @@ import com.radixdlt.harness.simulation.TestInvariant;
 import com.radixdlt.harness.simulation.network.SimulationNodes.RunningNetwork;
 import io.reactivex.rxjava3.core.Observable;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Check that every proposal on the network has a direct parent. This check only makes sense in
@@ -87,7 +86,7 @@ public class AllProposalsHaveDirectParentsInvariant implements TestInvariant {
             .map(network.getUnderlyingNetwork()::getNetwork)
             .map(net -> net.remoteEvents(ConsensusEvent.class).map(RemoteEvent::getEvent))
             .map(p -> p.ofType(Proposal.class).toObservable().map(Proposal::getVertex))
-            .collect(Collectors.toList());
+            .toList();
 
     return Observable.merge(correctProposals)
         .concatMap(
