@@ -86,7 +86,6 @@ import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -204,9 +203,7 @@ public final class ModuleRunnerImpl implements ModuleRunner {
 
       this.executorService.submit(() -> startProcessors.forEach(StartProcessor::start));
       final var disposables =
-          this.subscriptions.stream()
-              .map(s -> s.subscribe(singleThreadScheduler))
-              .collect(Collectors.toList());
+          this.subscriptions.stream().map(s -> s.subscribe(singleThreadScheduler)).toList();
       this.compositeDisposable = new CompositeDisposable(disposables);
 
       this.onStart.forEach(f -> f.accept(this.executorService));
